Поправил блоки и марджины

--- a/index.html
+++ b/index.html
@@ -15,19 +15,11 @@
 <body>
   <div class="page">
     <header class="header">
-      <div>
-        <img class="logo__place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
-      </div>
-      <div>
-        <h1 class="header__title">Научиться учиться</h1>
-      </div>
-      <div>
-        <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-          жизни?<a class="header__link" href="#"> Узнать &rarr;</a></h2>
-      </div>
-      <div>
-        <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение шапки">
-      </div>
+      <img class="logo__place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни?<a class="header__link" href="#"> Узнать &rarr;</a></h2>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение шапки">
       <div class="header__square-pic"></div>
     </header>
     <section class="page description">
@@ -140,7 +132,7 @@
       </div>
       <img src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle">
     </section>
-    <div class="footer">
+    <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_copyright">
           <img class="logo__place_header logo__place_footer" src="./images/logo_place_footer.svg" alt="Лого подвал">
@@ -168,7 +160,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </footer>
   </div>
 </body>
 
