Правльное расположение внутри body

--- a/index.html
+++ b/index.html
@@ -22,116 +22,118 @@
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение шапки">
       <div class="header__square-pic"></div>
     </header>
-    <section class="page description">
-      <div class="two-columns">
-        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-        <div class="two-columns__main-text">
-          <p class="two-columns__paragrafh">Ни в школе, ни в институте нас не учат тому, как правильно
-            изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы
-            лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не
-            приносит пользы.</p>
-          <p class="two-columns__paragrafh two-columns__accent"><span class="accent">Вывод:
-            </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-          <p class="two-columns__paragrafh">Конкретные техники и упражнения помогают изменить подход к
-            обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в
-            Практикуме.</p>
+    <div class="content">
+      <section class="page description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragrafh">Ни в школе, ни в институте нас не учат тому, как правильно
+              изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы
+              лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не
+              приносит пользы.</p>
+            <p class="two-columns__paragrafh two-columns__accent"><span class="accent">Вывод:
+              </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragrafh">Конкретные техники и упражнения помогают изменить подход к
+              обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в
+              Практикуме.</p>
+          </div>
         </div>
-      </div>
-    </section>
-    <section class="digits">
-      <h1 class="section__title">Цифры и факты</h1>
-      <h2 class="section__subtitle">Про учёбу и мозг</h2>
-      <div class="table">
-        <div class="table_cell">
-          <h1 class="table_heading">86 миллиардов</h1>
-          <h2 class="table_text">Число нейронов в мозге человека</h2>
+      </section>
+      <section class="digits">
+        <h1 class="section__title">Цифры и факты</h1>
+        <h2 class="section__subtitle">Про учёбу и мозг</h2>
+        <div class="table">
+          <div class="table_cell">
+            <h1 class="table_heading">86 миллиардов</h1>
+            <h2 class="table_text">Число нейронов в мозге человека</h2>
+          </div>
+          <div class="table_cell">
+            <h1 class="table_heading">2.1 миллиарда</h1>
+            <h2 class="table_text">Число нуждающихся в повышении квалификации</h2>
+            <h2 class="table_text">Всемирный Банк, 2017</h2>
+          </div>
+          <div class="table_cell">
+            <h1 class="table_heading">1000 терабайт</h1>
+            <h2 class="table_text">Объём памяти человека</h2>
+          </div>
+          <div class="table_cell">
+            <h1 class="table_heading">500 триллионов</h1>
+            <h2 class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</h2>
+          </div>
+          <div class="table_cell">
+            <h1 class="table_heading">420 миллионов</h1>
+            <h2 class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h2>
+            <h2 class="table_text">Всемирный Банк, 2017</h2>
+          </div>
+          <div class="table_cell">
+            <h1 class="table_heading">17–20 лет</h1>
+            <h2 class="table_text">Пик обучаемости</h2>
+          </div>
+          <div class="table_cell">
+            <h1 class="table_heading">1885 год</h1>
+            <h2 class="table_text">Открытие кривой забывания</h2>
+          </div>
+          <div class="table_cell">
+            <h1 class="table_heading">1889 год</h1>
+            <h2 class="table_text">Открытие условного рефлекса</h2>
+          </div>
         </div>
-        <div class="table_cell">
-          <h1 class="table_heading">2.1 миллиарда</h1>
-          <h2 class="table_text">Число нуждающихся в повышении квалификации</h2>
-          <h2 class="table_text">Всемирный Банк, 2017</h2>
+      </section>
+      <section class="feynman">
+        <h1 class="feynman__tttle">Метод Фейнмана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <img src="./images/feynman.png" alt="Изображение Фейнман" class="feynman__image">
+      </section>
+      <section class="kaufman">
+        <h1 class="section__title section__title_theme_dark">Принципы обучения</h1>
+        <h2 class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <div class="table table_theme_dark">
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">1</h1>
+            <h2 class="table_text table_text_theme_dark">Выберите привлекательный проект.</h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">2</h1>
+            <h2 class="table_text table_text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">3</h1>
+            <h2 class="table_text table_text_theme_dark">Определите целевой уровень мастерства.</h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">4</h1>
+            <h2 class="table_text table_text_theme_dark">Разбейте навык на элементы.</h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">5</h1>
+            <h2 class="table_text table_text_theme_dark">Приготовьте всё необходимое для занятий.</h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">6</h1>
+            <h2 class="table_text table_text_theme_dark">Устраните препятствия для занятий.</h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">7</h1>
+            <h2 class="table_text table_text_theme_dark">Выделите специальное время для занятий.</h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">8</h1>
+            <h2 class="table_text table_text_theme_dark">Создайте быстрые петли обратной связи.</h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">9</h1>
+            <h2 class="table_text table_text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </h2>
+          </div>
+          <div class="table_cell table_cell_theme_dark">
+            <h1 class="table_heading table_heading_theme_dark">10</h1>
+            <h2 class="table_text table_text_theme_dark">Уделяйте внимание количеству и скорости.</h2>
+          </div>
         </div>
-        <div class="table_cell">
-          <h1 class="table_heading">1000 терабайт</h1>
-          <h2 class="table_text">Объём памяти человека</h2>
-        </div>
-        <div class="table_cell">
-          <h1 class="table_heading">500 триллионов</h1>
-          <h2 class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</h2>
-        </div>
-        <div class="table_cell">
-          <h1 class="table_heading">420 миллионов</h1>
-          <h2 class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h2>
-          <h2 class="table_text">Всемирный Банк, 2017</h2>
-        </div>
-        <div class="table_cell">
-          <h1 class="table_heading">17–20 лет</h1>
-          <h2 class="table_text">Пик обучаемости</h2>
-        </div>
-        <div class="table_cell">
-          <h1 class="table_heading">1885 год</h1>
-          <h2 class="table_text">Открытие кривой забывания</h2>
-        </div>
-        <div class="table_cell">
-          <h1 class="table_heading">1889 год</h1>
-          <h2 class="table_text">Открытие условного рефлекса</h2>
-        </div>
-      </div>
-    </section>
-    <section class="feynman">
-      <h1 class="feynman__tttle">Метод Фейнмана</h1>
-      <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
-      <a href="#" class="feynman__link">Подробнее &rarr;</a>
-      <img src="./images/feynman.png" alt="Изображение Фейнман" class="feynman__image">
-    </section>
-    <section class="kaufman">
-      <h1 class="section__title section__title_theme_dark">Принципы обучения</h1>
-      <h2 class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</h2>
-      <div class="table table_theme_dark">
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">1</h1>
-          <h2 class="table_text table_text_theme_dark">Выберите привлекательный проект.</h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">2</h1>
-          <h2 class="table_text table_text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">3</h1>
-          <h2 class="table_text table_text_theme_dark">Определите целевой уровень мастерства.</h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">4</h1>
-          <h2 class="table_text table_text_theme_dark">Разбейте навык на элементы.</h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">5</h1>
-          <h2 class="table_text table_text_theme_dark">Приготовьте всё необходимое для занятий.</h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">6</h1>
-          <h2 class="table_text table_text_theme_dark">Устраните препятствия для занятий.</h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">7</h1>
-          <h2 class="table_text table_text_theme_dark">Выделите специальное время для занятий.</h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">8</h1>
-          <h2 class="table_text table_text_theme_dark">Создайте быстрые петли обратной связи.</h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">9</h1>
-          <h2 class="table_text table_text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
-          </h2>
-        </div>
-        <div class="table_cell table_cell_theme_dark">
-          <h1 class="table_heading table_heading_theme_dark">10</h1>
-          <h2 class="table_text table_text_theme_dark">Уделяйте внимание количеству и скорости.</h2>
-        </div>
-      </div>
-      <img src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle">
-    </section>
+        <img src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle">
+      </section>
+    </div>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_copyright">
