--- a/index.html
+++ b/index.html
@@ -43,39 +43,39 @@
         <h1 class="section__title">Цифры и факты</h1>
         <h2 class="section__subtitle">Про учёбу и мозг</h2>
         <div class="table">
-          <div class="table_cell">
-            <h1 class="table_heading">86 миллиардов</h1>
-            <h2 class="table_text">Число нейронов в мозге человека</h2>
+          <div class="table__cell">
+            <h1 class="table__heading">86 миллиардов</h1>
+            <h2 class="table__text">Число нейронов в мозге человека</h2>
           </div>
-          <div class="table_cell">
-            <h1 class="table_heading">2.1 миллиарда</h1>
-            <h2 class="table_text">Число нуждающихся в повышении квалификации</h2>
-            <h2 class="table_text">Всемирный Банк, 2017</h2>
+          <div class="table__cell">
+            <h1 class="table__heading">2.1 миллиарда</h1>
+            <h2 class="table__text">Число нуждающихся в повышении квалификации</h2>
+            <h2 class="table__text">Всемирный Банк, 2017</h2>
           </div>
-          <div class="table_cell">
-            <h1 class="table_heading">1000 терабайт</h1>
-            <h2 class="table_text">Объём памяти человека</h2>
+          <div class="table__cell">
+            <h1 class="table__heading">1000 терабайт</h1>
+            <h2 class="table__text">Объём памяти человека</h2>
           </div>
-          <div class="table_cell">
-            <h1 class="table_heading">500 триллионов</h1>
-            <h2 class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</h2>
+          <div class="table__cell">
+            <h1 class="table__heading">500 триллионов</h1>
+            <h2 class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</h2>
           </div>
-          <div class="table_cell">
-            <h1 class="table_heading">420 миллионов</h1>
-            <h2 class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h2>
-            <h2 class="table_text">Всемирный Банк, 2017</h2>
+          <div class="table__cell">
+            <h1 class="table__heading">420 миллионов</h1>
+            <h2 class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h2>
+            <h2 class="table__text">Всемирный Банк, 2017</h2>
           </div>
-          <div class="table_cell">
-            <h1 class="table_heading">17–20 лет</h1>
-            <h2 class="table_text">Пик обучаемости</h2>
+          <div class="table__cell">
+            <h1 class="table__heading">17–20 лет</h1>
+            <h2 class="table__text">Пик обучаемости</h2>
           </div>
-          <div class="table_cell">
-            <h1 class="table_heading">1885 год</h1>
-            <h2 class="table_text">Открытие кривой забывания</h2>
+          <div class="table__cell">
+            <h1 class="table__heading">1885 год</h1>
+            <h2 class="table__text">Открытие кривой забывания</h2>
           </div>
-          <div class="table_cell">
-            <h1 class="table_heading">1889 год</h1>
-            <h2 class="table_text">Открытие условного рефлекса</h2>
+          <div class="table__cell">
+            <h1 class="table__heading">1889 год</h1>
+            <h2 class="table__text">Открытие условного рефлекса</h2>
           </div>
         </div>
       </section>
@@ -87,48 +87,49 @@
       </section>
       <section class="kaufman">
         <h1 class="section__title section__title_theme_dark">Принципы обучения</h1>
-        <h2 class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</h2>
-        <div class="table table_theme_dark">
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">1</h1>
-            <h2 class="table_text table_text_theme_dark">Выберите привлекательный проект.</h2>
+        <h2 class="section__subtitle section__subtitle__theme_dark">от Джоша Кауфмана</h2>
+        <div class="table table__theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">1</h1>
+            <h2 class="table__text table__text_theme_dark">Выберите привлекательный проект.</h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">2</h1>
-            <h2 class="table_text table_text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</h2>
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">2</h1>
+            <h2 class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">3</h1>
-            <h2 class="table_text table_text_theme_dark">Определите целевой уровень мастерства.</h2>
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">3</h1>
+            <h2 class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">4</h1>
-            <h2 class="table_text table_text_theme_dark">Разбейте навык на элементы.</h2>
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">4</h1>
+            <h2 class="table__text table__text_theme_dark">Разбейте навык на элементы.</h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">5</h1>
-            <h2 class="table_text table_text_theme_dark">Приготовьте всё необходимое для занятий.</h2>
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">5</h1>
+            <h2 class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">6</h1>
-            <h2 class="table_text table_text_theme_dark">Устраните препятствия для занятий.</h2>
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">6</h1>
+            <h2 class="table__text table__text_theme_dark">Устраните препятствия для занятий.</h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">7</h1>
-            <h2 class="table_text table_text_theme_dark">Выделите специальное время для занятий.</h2>
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">7</h1>
+            <h2 class="table__text table__text_theme_dark">Выделите специальное время для занятий.</h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">8</h1>
-            <h2 class="table_text table_text_theme_dark">Создайте быстрые петли обратной связи.</h2>
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">8</h1>
+            <h2 class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">9</h1>
-            <h2 class="table_text table_text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">9</h1>
+            <h2 class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
+              интервалами.
             </h2>
           </div>
-          <div class="table_cell table_cell_theme_dark">
-            <h1 class="table_heading table_heading_theme_dark">10</h1>
-            <h2 class="table_text table_text_theme_dark">Уделяйте внимание количеству и скорости.</h2>
+          <div class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">10</h1>
+            <h2 class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</h2>
           </div>
         </div>
         <img src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle">
