--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
           <div class="footer__column-heading">Соцсети</div>
           <ul class="footer__column-links">
             <li class="footer__column-link"><a href="#" class="footer__column-link"><img class="footer_social-icon"
-                  src="./youtube-icon.svg" alt="Лого Ютуб">
+                  src="./images/youtube-icon.svg" alt="Лого Ютуб">
                 YouTube</a></li>
             <li class="footer__column-link"><a href="#" class="footer__column-link"><img class="footer_social-icon"
                   src="./images/vk_color_white.svg" alt="Лого ВК"> ВКонтакте</a></li>
             <li class="footer__column-link"><a href="#" class="footer__column-link"><img class="footer_social-icon"
-                  src="./tiktok-icon.svg" alt="Лого ТикТок">
+                  src="./images/tiktok-icon.svg" alt="Лого ТикТок">
                 TikTok</a></li>
           </ul>
         </div>
