--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo__place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
+      <div class="logo">
+        <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
+      </div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни?<a class="header__link" href="#"> Узнать &rarr;</a></h2>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни?<a class="header__link" href="#"> Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение шапки">
       <div class="header__square-pic"></div>
     </header>
-    <div class="content">
+    <main class="content">
       <section class="page description">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -31,7 +33,7 @@
               изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы
               лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не
               приносит пользы.</p>
-            <p class="two-columns__paragrafh two-columns__accent"><span class="accent">Вывод:
+            <p class="two-columns__paragrafh"><span class="two-columns__accent">Вывод:
               </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragrafh">Конкретные техники и упражнения помогают изменить подход к
               обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в
@@ -40,130 +42,133 @@
         </div>
       </section>
       <section class="digits">
-        <h2 class="section__title">Цифры и факты</h2>
-        <h3 class="section__subtitle">Про учёбу и мозг</h3>
+        <div class="digits__title">Цифры и факты</div>
+        <div class="digits__subtitle">Про учёбу и мозг</div>
         <div class="table">
           <div class="table__cell">
-            <h2 class="table__heading">86 миллиардов</h2>
-            <h3 class="table__text">Число нейронов в мозге человека</h3>
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading">2.1 миллиарда</h2>
-            <h3 class="table__text">Число нуждающихся в повышении квалификации</h3>
-            <h3 class="table__text">Всемирный Банк, 2017</h3>
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading">1000 терабайт</h2>
-            <h3 class="table__text">Объём памяти человека</h3>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading">500 триллионов</h2>
-            <h3 class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</h3>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading">420 миллионов</h2>
-            <h3 class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h3>
-            <h3 class="table__text">Всемирный Банк, 2017</h3>
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading">17–20 лет</h2>
-            <h3 class="table__text">Пик обучаемости</h3>
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading">1885 год</h2>
-            <h3 class="table__text">Открытие кривой забывания</h3>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading">1889 год</h2>
-            <h3 class="table__text">Открытие условного рефлекса</h3>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
       <section class="feynman">
         <h2 class="feynman__tttle">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
         <img src="./images/feynman.png" alt="Изображение Фейнман" class="feynman__image">
       </section>
       <section class="kaufman">
-        <h2 class="section__title section__title_theme_dark">Принципы обучения</h2>
-        <h2 class="section__subtitle section__subtitle__theme_dark">от Джоша Кауфмана</h2>
-        <div class="table table__theme_dark">
+        <h2 class="digits__title digits__title_theme_dark">Принципы обучения</h2>
+        <p class="digits__subtitle digits__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">1</h2>
-            <h3 class="table__text table__text_theme_dark">Выберите привлекательный проект.</h3>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">2</h2>
-            <h3 class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</h3>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">3</h2>
-            <h3 class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</h3>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">4</h2>
-            <h3 class="table__text table__text_theme_dark">Разбейте навык на элементы.</h3>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">5</h2>
-            <h3 class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</h3>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">6</h2>
-            <h3 class="table__text table__text_theme_dark">Устраните препятствия для занятий.</h3>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">7</h2>
-            <h3 class="table__text table__text_theme_dark">Выделите специальное время для занятий.</h3>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">8</h2>
-            <h3 class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</h3>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">9</h2>
-            <h3 class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
               интервалами.
-            </h3>
+            </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">10</h2>
-            <h3 class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</h3>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle">
+        <div class="kaufman__triangle">
+          <img src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана">
+        </div>
       </section>
-    </div>
+    </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_copyright">
-          <img class="logo__place_header logo__place_footer" src="./images/logo_place_footer.svg" alt="Лого подвал">
-          <div class="footer__author">&copy; Денис Недосейкин</div>
+        <div class="footer__columns footer__columns_content_copyright">
+          <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Лого подвал">
+          <p class="footer__author">&copy; Денис Недосейкин</p>
         </div>
-        <div class="footer__column_content_info">
+        <nav class="footer__columns footer__columns_content_info">
           <div class="footer__column-heading">О Практикуме</div>
           <ul class="footer__column-links">
-            <li class="footer__column-link"><a href="#" class="footer__column-link">Главная</a></li>
-            <li class="footer__column-link"><a href="#" class="footer__column-link">Концепция</a></li>
-            <li class="footer__column-link"><a href="#" class="footer__column-link">Наставники</a></li>
+            <li><a href="#" class="footer__column-link">Главная</a></li>
+            <li><a href="#" class="footer__column-link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
-        </div>
-        <div class="footer__column_content_social">
+        </nav>
+        <nav class="footer__columns footer__columns_content_social">
           <div class="footer__column-heading">Соцсети</div>
           <ul class="footer__column-links">
-            <li class="footer__column-link"><a href="#" class="footer__column-link"><img class="footer_social-icon"
-                  src="./images/youtube-icon.svg" alt="Лого Ютуб">
+            <li><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg"
+                  alt="Лого Ютуб">
                 YouTube</a></li>
-            <li class="footer__column-link"><a href="#" class="footer__column-link"><img class="footer_social-icon"
+            <li><a href="#" class="footer__column-link"><img class="footer__social-icon"
                   src="./images/vk_color_white.svg" alt="Лого ВК"> ВКонтакте</a></li>
-            <li class="footer__column-link"><a href="#" class="footer__column-link"><img class="footer_social-icon"
-                  src="./images/tiktok-icon.svg" alt="Лого ТикТок">
+            <li><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg"
+                  alt="Лого ТикТок">
                 TikTok</a></li>
           </ul>
-        </div>
+        </nav>
       </div>
-    </footer>
+  </div>
+  </footer>
   </div>
 </body>
 
