--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="page">
     <header class="header">
       <div class="logo">
-        <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
+        <img class="logo logo__place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
       </div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
@@ -25,7 +25,7 @@
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
-      <section class="page description">
+      <section class="description">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -141,11 +141,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns footer__columns_content_copyright">
+        <div class="footer__column_content_copyright">
           <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Лого подвал">
           <p class="footer__author">&copy; Денис Недосейкин</p>
         </div>
-        <nav class="footer__columns footer__columns_content_info">
+        <nav class="footer__column_content_info">
           <div class="footer__column-heading">О Практикуме</div>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link">Главная</a></li>
@@ -153,7 +153,7 @@
             <li><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
         </nav>
-        <nav class="footer__columns footer__columns_content_social">
+        <nav class="footer__column_content_social">
           <div class="footer__column-heading">Соцсети</div>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg"
