--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="page">
     <header class="header">
       <div class="logo">
-        <img class="logo logo__place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
+        <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
       </div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
@@ -42,8 +42,8 @@
         </div>
       </section>
       <section class="digits">
-        <div class="digits__title">Цифры и факты</div>
-        <div class="digits__subtitle">Про учёбу и мозг</div>
+        <div class="section-title">Цифры и факты</div>
+        <div class="section-subtitle">Про учёбу и мозг</div>
         <div class="table">
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -88,8 +88,8 @@
         <img src="./images/feynman.png" alt="Изображение Фейнман" class="feynman__image">
       </section>
       <section class="kaufman">
-        <h2 class="digits__title digits__title_theme_dark">Принципы обучения</h2>
-        <p class="digits__subtitle digits__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -141,11 +141,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Лого подвал">
+        <div class="footer__column footer__column_content_copyright">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Лого подвал">
           <p class="footer__author">&copy; Денис Недосейкин</p>
         </div>
-        <nav class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <div class="footer__column-heading">О Практикуме</div>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link">Главная</a></li>
@@ -153,7 +153,7 @@
             <li><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
         </nav>
-        <nav class="footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <div class="footer__column-heading">Соцсети</div>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg"
