--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo">
-        <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
-      </div>
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?<a class="header__link" href="#"> Узнать &rarr;</a></p>
@@ -26,7 +24,7 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragrafh">Ни в школе, ни в институте нас не учат тому, как правильно
@@ -39,11 +37,11 @@
               обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в
               Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
-        <div class="section-title">Цифры и факты</div>
-        <div class="section-subtitle">Про учёбу и мозг</div>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -134,9 +132,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle">
-          <img src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана">
-        </div>
+        <div class="kaufman__triangle" alt="Треугольник Кауфмана"></div>
       </section>
     </main>
     <footer class="footer">
@@ -146,7 +142,7 @@
           <p class="footer__author">&copy; Денис Недосейкин</p>
         </div>
         <nav class="footer__column footer__column_content_info">
-          <div class="footer__column-heading">О Практикуме</div>
+          <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link">Главная</a></li>
             <li><a href="#" class="footer__column-link">Концепция</a></li>
@@ -154,7 +150,7 @@
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
-          <div class="footer__column-heading">Соцсети</div>
+          <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg"
                   alt="Лого Ютуб">
