--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle" alt="Треугольник Кауфмана"></div>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
