--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение шапки">
       <div class="header__square-pic"></div>
     </header>
-    .
     <main class="content">
       <section class="description">
         <article class="two-columns">
@@ -39,6 +38,40 @@
               Практикуме.</p>
           </div>
         </article>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img src="./images/cards-attention.png" class="cards__image" alt="Картинка к описанию"></img>
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img src="./images/cards-recall.png" class="cards__image" alt="Картинка к описанию"></img>
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img src="./images/cards-interliving.png" class="cards__image" alt="Картинка к описанию"></img>
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img src="./images/cards-question.png" class="cards__image" alt="Картинка к описанию"></img>
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img src="./images/cards-competence.png" class="cards__image" alt="Картинка к описанию"></img>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
+          </div>
+        </div>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
