--- a/index.html
+++ b/index.html
@@ -73,6 +73,38 @@
           </div>
         </div>
       </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/xN8a2cmZVtE"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/wKU25Gd9yd4"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragrafh">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+              так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+              тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </article>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__tttle">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <img src="./images/feynman.png" alt="Изображение Фейнман" class="feynman__image">
+      </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
@@ -113,11 +145,21 @@
           </div>
         </div>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__tttle">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img src="./images/feynman.png" alt="Изображение Фейнман" class="feynman__image">
+      <section class="khan">
+        <div class="khan__container">
+          <div class="khan__autor">Салман Хан</div>
+          <div class="khan__title">Весь мир — школа</div>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по
+            всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся
+            повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+          <div class="khan__quote-autor">Джордж Лукас</div>
+          <div class="khan__quote-autor-subline">Кинорежиссер, продюсер</div>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Обложка книги"></img>
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+          </div>
+
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -168,6 +210,16 @@
         </div>
         <div class="kaufman__triangle"></div>
       </section>
+      <div class="resources">
+        <div class="section-title">Полезные ресурсы</div>
+        <div class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</div>
+        <div class="rosources__logo-zone">
+          <a href="#"><img class="resources__link" src="./images/logo/resources-arzamas.svg" alt="Лого ссылки"></a>
+          <a href="#"><img class="resources__link" src="./images/logo/resources-n1.svg" alt="Лого ссылки"></a>
+          <a href="#"><img class="resources__link" src="./images/logo/resources-strelka.svg" alt="Лого ссылки"></a>
+          <a href="#"><img class="resources__link" src="./images/logo/resources-polka.svg" alt="Лого ссылки"></a>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <div class="footer__columns">
