--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?<a class="header__link" href="#"> Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение шапки">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -208,7 +208,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <div class="resources">
         <div class="section-title">Полезные ресурсы</div>
