--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="html, css, javascript">
   <meta name="author" content="Денис Недосейкин">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
